change to kramdown enging

--- a/_posts/2016-06-18-hashtime.md
+++ b/_posts/2016-06-18-hashtime.md
@@ -10,11 +10,13 @@ There are couple of items on that list that survived all of the transitions. The
 The idea came from a real need. I had a long period at work where my days were very busy and yet I felt I was not advancing the main project I worked on. At the end of each day I would try to break down why I didn't have time to work on my main task, what were the distractions (meetings, other projects, mentoring other developers) and how much time I put into each one, but the hours just didn't add up. What I wanted was a time tracker (which there are tons of), but one where I could just put down a sentence describing what I just spent time on and how much time and let the tool do all the rest. The concept I came up with is super simple, and you will probably understand it in five seconds. I call it hashtime.
 
 <p align="center">
-  <div class="responsive-image">
-    <img class="gfyitem" data-id="CompleteIndelibleBlacknorwegianelkhound" data-expand=true/>
-    <small>Click the image to pause the animation.</small>
-  </div>
+<div class="responsive-image">
+<img class="gfyitem" data-id="CompleteIndelibleBlacknorwegianelkhound" data-expand="true">
+</img>
+<small>Click the image to pause the animation.</small>
+</div>
 </p>
+
 
 ### The Stack
 I usually use my side projects as an excuse to learn and experience some new technology, library or framework, but it's not easy to keep the balance between putting  time into learning something and actually advancing the project. The stack for the last side project I worked on included React, Redux, PostgreSQL and NodeJS. All were new to me except for node so it took a while to get going, and by the time that happened I kind of lost my momentum. Oh I'll get back to it, it was a great idea, but it kind of fizzled out. For hashtime, I thought it would be cool to [dogfood](https://en.wikipedia.org/wiki/Eating_your_own_dog_food) the tool for the actual work I put into it, so I wanted to get something working really fast and I figured I'd maybe use stuff I already know instead of learning something new. Turns out I didn't need to comprise.
@@ -32,4 +34,5 @@ Yes!
 
 If you have some suggestions or if you would like to use hashtime, shoot me a comment/email/tweet.
 
-<script type"text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
+<script type="text/javascript" src="https://assets.gfycat.com/gfycat.js">
+</script>
